--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,13 @@
 # requirements.txt
-snowflake-connector-python
+
+
+snowflake-connector-python==2.7.9
+altair
+pandas
+streamlit
+snowflake
+charset-normalizer==2.0.12
+
+ 
+
+
